# caguayo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Nuevo documento de texto.txt  README.en.md  README.html  README.md  clean_ventas.py  docker-compose.yml  install_deps.bat  main.py  package.json  patch2.py  patch_base.py  patch_cliente_service.py  patch_repo.py  pnpm-lock.yaml  pyproject.toml  skills-lock.json  start.sh  to-do.md  ty.toml  update_app_header.py  update_cliente_aggregate.py  verify-docker.sh
backend/: .env.example  Dockerfile  alembic.ini  datos_prueba.sql  entrypoint.sh  generar_datos_prueba.py  init_db.py  main.py  main_simple.py  pyproject.toml  requirements.txt  ruff.txt  seed_caguayosa.py  ty.txt
backend/alembic/: env.py
backend/alembic/versions/: 0e9b65ee4d21_add_id_anexo_to_item_factura_and_item_.py  128537904b80_add_id_cliente_to_productos_en_.py  26bae45686ea_add_contracts_tables.py  2712054c807a_add_database_fields_to_dependencia_and_.py  32573ff94f16_merge_id_cuenta_and_reeup.py  4afe28ed5947_add_clientes_ventas_detalle_ventas.py  524de4aaae94_merge_rename_existencia_stock_v2_with_.py  5dd72b9a7eba_add_products_missing_fields.py  5eb4bad34494_initial_migration.py  67aa739e66e8_add_conexion_database_table_and_migrate_.py  71dfb26e6097_merge_pago_with_conexion.py  733b55e2a9ce_add_a_vender_to_item_anexo.py  7707c2a751cf_change_persona_etapa_fk_to_clientes.py  86f8e8848cf1_add_codigo_to_convenio.py  90e6a1d4ded9_add_existencia_to_productos.py  924a816ae36e_add_cantidad_vendida_to_item_anexo.py  98c800710a25_merge_heads.py  a9d239ce0765_initial_state.py  add_ajuste_fields.py  add_cargo_usuario.py  add_codigo_to_clientes.py  add_codigo_to_compra_venta.py  add_codigo_to_item_anexo.py  add_compras_tables.py  add_confirmado_liquidacion.py  add_cuenta_dependencias_table.py  add_denominacion_to_dependencia.py  add_existencia_to_item_anexo.py  add_facturada_tarea_etapa.py  add_id_cuenta_to_factura.py  (+44 more)
backend/scripts/: execute_fix.py  fix_pel_anexo.py  fix_pel_anexo.sql  migrate_all_dbs.py
backend/sql/: alter_certificaciones_desc_observ.sql  alter_etapas_tipo.sql  alter_liquidaciones_pagos.sql  alter_persona_etapa_pago.sql  certificaciones.sql  datos_prueba.sql  db.sql  init.sql  new.sql  nuevas_tablas.sql  replication.sql  seed_realista.sql  triggers_existencia.sql  update_db.sql
backend/src/: __init__.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_compras_integration.py  test_dto_validations.py  test_error_handling.py  test_liquidacion_validation.py  test_movimiento_confirm.py  test_reportes.py  test_ventas_integration.py
(+388 files in other folders)
