[project]
name = "caguayo-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "ruff>=0.15.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
