[project]
name = "api-inventario"
version = "1.0.0"
description = "API para visualización de base de datos de inventario"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "psycopg[binary]>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
]
